Docker fix and GeneralOptimizations

--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -30,7 +30,7 @@
           required
         />
       </div>
-      <div class="w-full mt-4 justify-between flex-row">
+      <div class="w-full mt-4 justify-between flex">
         <div class="space-x-3">
           <input type="checkbox" name="" id="" />
           <label for="">Remember me</label>
@@ -40,7 +40,7 @@
             routerLink="/forgot-password"
             routerLinkActive="active"
             class="hover:underline font-[500] hover:cursor-pointer"
-            >Forgot password</a
+            >Forgot password ?</a
           >
         </div>
       </div>
