--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -67,6 +67,7 @@
 
             <div>
               <span class="font-semibold">Item(s) Cost</span> : {{ ordersCost }}
+              <span class="flex font-semibold">Service Charge : {{ serviceCharge }}</span> 
             </div>
             @if(delivery){
             <div>
@@ -96,6 +97,81 @@
   </div>
   }
 
+  @if(updateProfileModal){
+  <!-- Profile Update -->
+  <div
+    id="dialog"
+    class="fixed left-0 top-0 bg-black bg-opacity-50 w-screen h-screen z-50"
+  >
+    <!-- Close Button -->
+    <div
+      (click)="toggleProfileModal()"
+      class="group absolute top-16 right-2 flex items-center justify-center w-10 h-10 bg-gray-200 rounded-full md:bg-white md:top-4 hover:cursor-pointer hover:-translate-y-0.5 transition duration-150"
+    >
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        class="w-6 h-6 text-black group-hover:text-gray-600"
+        viewBox="0 0 24 24"
+        stroke-width="1.5"
+        stroke="currentColor"
+        fill="none"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+      >
+        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+        <line x1="18" y1="6" x2="6" y2="18" />
+        <line x1="6" y1="6" x2="18" y2="18" />
+      </svg>
+    </div>
+    <div
+      class="bg-white rounded-xl shadow-md p-4 mx-auto my-20 w-[90%] max-h-[80%] border"
+    >
+      <div class="flex items-center gap-5">
+        <div
+          class="m-0 md:flex-col shadow-lg w-full md:p-1 lg:p-3 xl:p-4 bg-[#0f172a08] space-y-6"
+        >
+        <form [formGroup]="profileUpdateForm" (submit)="updateProfile()">
+          <div class="flex flex-col space-y-3">
+            <span class="font-bold">Update your profile</span>
+            <!-- Cart list -->
+            <div class="form_div">
+              <label for="">Enter Your Phone</label>
+              <input
+                required
+                class="border p-3 rounded-md"
+                placeholder="Input Your Phone"
+                formControlName="phone"
+                type="text"
+                required
+              />
+            </div>
+            <div class="form_div">
+              <label for="">Enter Your Address</label>
+              <input
+                required
+                class="border p-3 rounded-md"
+                placeholder="Enter Your Address"
+                formControlName="address"
+                type="text"
+                required
+              />
+            </div>
+            <div class="form_div">
+              <button
+                style="background-color: #0f172a"
+                class="create_button flex justify-center p-3 space-x-4 text-white hover:shadow-lg duration-300"
+                type="submit"
+              >
+                <span>Update</span>
+              </button>
+            </div>
+          </div>
+        </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  }
   <!-- Mobile Div -->
   <div class="flex flex-col md:hidden pt-4">
     <div class="px-5 space-y-3">
@@ -330,12 +406,20 @@
           ></app-cart-item>
           }
         </div>
-        <div><span class="font-semibold">Item(s) Cost</span> : {{ ordersCost }}</div>
-        @if(delivery){
         <div>
-          <span class="font-semibold">Delivery Cost</span> : {{ deliveryFee }}
-        </div>
+          @if(cartCount > 0){
+            <span class="flex font-semibold">Item(s) Cost : {{ ordersCost }}</span> 
+          @if(delivery){
+            <span class="flex font-semibold">Delivery Cost : {{ deliveryFee }}</span> 
+          }
+          <span class="flex font-semibold">Service Charge : {{ serviceCharge }}</span> 
         }
+        </div>
+        
+          <div>
+            <span class="font-bold">Total</span> : {{ totalcost }}
+          </div>
+        
         <app-delivery-option
           (selectedDeliveryModeEmitter)="deliveryModeChanged($event)"
         ></app-delivery-option>
