--- a/src/app/components/personal-info/personal-info.component.html
+++ b/src/app/components/personal-info/personal-info.component.html
@@ -12,16 +12,21 @@
     
     <!-- Content Div -->
     <div class="flex flex-col min-h-[45%] mt-8 bg-white px-5 py-3">
-        <span class="text_title">Personal Information</span>
+        <div class="flex"><span class="text_title">Personal Information</span> <span></span></div>
+        
         <div class="flex space-x-5 mt-5">
             <div class="flex flex-col space-y-4">
                 <span class="info_title">Name</span>
                 <span class="info_title">Email</span>
+                <span class="info_title">Address</span>
+                <span class="info_title">Phone</span>
             </div>
 
             <div class="flex flex-col space-y-4">
                 <span class="info_title opacity-70">{{user?.name}}</span>
                 <span class="info_title opacity-70">{{user?.email}}</span>
+                <span class="info_title opacity-70"></span>
+                <span class="info_title opacity-70"></span>
             </div>
         </div>
     </div>
