Fixes and Optimizations

--- a/src/app/components/personal-info/personal-info.component.html
+++ b/src/app/components/personal-info/personal-info.component.html
@@ -25,8 +25,8 @@
             <div class="flex flex-col space-y-4">
                 <span class="info_title opacity-70">{{user?.name}}</span>
                 <span class="info_title opacity-70">{{user?.email}}</span>
-                <span class="info_title opacity-70"></span>
-                <span class="info_title opacity-70"></span>
+                <span class="info_title opacity-70">{{user?.address}}</span>
+                <span class="info_title opacity-70">{{user?.phone}}</span>
             </div>
         </div>
     </div>
