--- a/src/app/components/order/order.component.html
+++ b/src/app/components/order/order.component.html
@@ -242,7 +242,7 @@
         <span class="font-bold">Search Food</span>
         <div class="flex items-center w-full">
           <input
-            class="py-3 pl-12 px-1 rounded-lg w-full bg-[#7676801f] focus:outline-none"
+            class="py-3 pl-12 px-1 rounded-lg w-full bg-[#7676801f] focus:border focus:border-[#E91E63]"
             type="text"
             name=""
             placeholder="Search"
