--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,24 +1,29 @@
 <!-- Entire Div -->
-<div class="flex flex-row min-h-full">
-  <!-- Side Bar -->
-  <section class="w-[27%] 2xl:px-10 flex flex-col bg-white items-center pt-10">
-    <div class="font-semibold text-sm lg:text-2xl text-vendblocblue mb-4">My Dashboard</div>
-    <img
-      src="../../../assets/dashboarduser.png"
-      class="rounded-full w-[50px] lg:w-[150px]"
-      alt=""
-    />
-    <span class="flex text-center font-inter text-sm lg:text-2xl font-semibold text-[#0F172AB2] mt-2"
-      >{{user?.name}}</span
-    >
-    <div class="flex flex-col w-[90%] mt-5">
-     <app-side-menu-item (click)="navigate($event,'info')" menuName="Personal Information"></app-side-menu-item>
-     <app-side-menu-item (click)="navigate($event,'my-orders')" menuName="My Orders"></app-side-menu-item>
-     <app-side-menu-item menuName="Change Password"></app-side-menu-item>
-     <app-side-menu-item menuName="Log Out"></app-side-menu-item>
-    </div>
-  </section>
-  <div class="w-full min-h-screen bg-[#F2F2F2] flex flex-col px-10 2xl:px-20 py-6">
-   <ng-content></ng-content>
+<div class="flex flex-row border-2">
+  <div class="flex h-fit rounded-md py-2 px-1 absolute">
+    <p-sidebar [(visible)]="sidebarVisible">
+      <section class="2xl:px-10 flex flex-col bg-white items-center pt-1">
+        <div class="font-semibold text-sm lg:text-2xl text-vendblocblue mb-4">My Dashboard</div>
+        <img
+          src="../../../assets/dashboarduser.png"
+          class="rounded-full w-[50px] lg:w-[150px]"
+          alt=""
+        />
+        <span class="flex text-center font-inter text-sm lg:text-2xl font-semibold text-[#0F172AB2] mt-2"
+          >{{user?.name}}</span
+        >
+        <div class="flex flex-col w-[90%] mt-5">
+         <app-side-menu-item (click)="navigate($event,'info')" menuName="Personal Information"></app-side-menu-item>
+         <app-side-menu-item (click)="navigate($event,'my-orders')" menuName="My Orders"></app-side-menu-item>
+         <app-side-menu-item (click)="navigate($event,'my-outlets')" menuName="My Outlets"></app-side-menu-item>
+         <app-side-menu-item menuName="Change Password"></app-side-menu-item>
+         <app-side-menu-item menuName="Log Out"></app-side-menu-item>
+        </div>
+      </section>
+    </p-sidebar>
+    <!-- <p-button class="text-white" (click)="sidebarVisible = true" icon="pi pi-bars"></p-button> -->
+  </div>
+  <div class="w-full h-[500px] bg-[#F2F2F2] flex flex-col px-10 2xl:px-20 py-6">
+    <ng-content></ng-content>
   </div>
 </div>
