--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,9 @@
+@import "primeicons/primeicons.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 
 .nav_link{
     @apply text-[14px] font-inter font-[500];
