--- a/src/app/components/layouts/header/header.component.html
+++ b/src/app/components/layouts/header/header.component.html
@@ -6,7 +6,7 @@
   @if(isAuthenticated){
   <!-- Links -->
   <div class="flex-col justify-end space-y-3 md:flex-row space-x-2 md:space-x-6 xl:space-x-8 md:items-center">
-    <a class="active_nav_link" routerLink="/home" href="#">Home</a>
+    <!-- <a class="active_nav_link" routerLink="/home" href="#">Home</a> -->
     <a class="nav_link" routerLink="/dashboard" href="#">Dashboard</a>
   </div>
 }
